# ros2-action-mux

./: CMakeLists.txt  README.md  package.xml
1_ Write a basic code in ROS 2 writing an action server and the action client/: README.md  action_client.cpp  action_server.cpp  goal_publisher.cpp
2_Write a generic subscriber that can subscribe to a topic of any message type/: 1_generic_subscriber.cpp  3_Execution  README.md
2_Write a generic subscriber that can subscribe to a topic of any message type/2_publishers for testing/: int_publisher.cpp  pose_publisher.cpp  string_publisher.cpp
2_Write a generic subscriber that can subscribe to a topic of any message type/4_Extended implementation/dynamic topic subscription at runtime/: README.md  dynamic_generic_subscriber.cpp
action/: processRequest.action
include/ros2_action_mux/: action_client.hpp  action_server.hpp  actioon_client.hpp  generic_subscriber.hpp
launch/: action_demo.launch.py  int_test.launch.py  pose_test.launch.py  string_test.launch.py
src/: action_client.cpp  action_server.cpp  generic_subscriber.cpp
src/test_publishers/: int_publisher.cpp  pose_publisher.cpp  string_publisher.cpp
src/utils/: message_type_printer.hpp
